syntax = "proto3";

option csharp_namespace = "LearnApp.OrderService";

service OrderManager {
  // Sends a greeting
  rpc GetOeder (UserRequest) returns (OrderResponse);
}

// The request message containing the user's name.
message UserRequest {
  string name = 1;
}

// The response message containing the greetings.
message OrderResponse {
  string message = 1;
  string orderId = 2;
}